# qt-chat-lite

./: CMakeLists.txt  README  TcpClient  TcpServer  act.sh  link.sh  run.sh
new/: cmake.sh
new/source/: TcpClient.cpp  TcpClient.h  TcpServer.cpp
source/: TcpServer.h  main.cpp
